--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -59,7 +59,7 @@ body {
   text-rendering: optimizeLegibility;
    letter-spacing: 0.4px;
    word-spacing: 2px;
-  color: #888;
+  color: #a9b2b9;
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 } /* 16px/22px = font size line height
 
@@ -174,6 +174,10 @@ h5 {
   font-weight: 400;
   text-transform: uppercase;
   color:#648880;
+}
+
+p{
+  font-weight: 300;
 }
 
 strong {
@@ -573,6 +577,53 @@ table h4 {
     max-width: 238px;
     padding: 0 10px;
   }
+
+table {
+  margin-bottom: 44px;
+  width: 100%;
+
+}
+table:last-child {
+  margin-bottom: 0;
+}
+th,
+td {
+  padding-bottom: 12px;
+  vertical-align: top;
+}
+th {
+  padding-right: 22px;
+  text-align: right;
+  width: 20%;
+}
+td {
+  width: 40%;
+}
+thead {
+  line-height: 22px;
+}
+thead th {
+  color: #648880;
+  font-size: 12px;
+}
+tbody th {
+  color: #a9b2b9;
+  font-size: 12px;
+  font-weight: 400;
+  padding-top: 22px;
+  text-transform: uppercase;
+}
+tbody td {
+  border-top: 1px solid #648880;
+  padding-top: 21px;
+}
+tbody td:first-of-type {
+  padding-right: 15px;
+}
+tbody td:last-of-type {
+  padding-left: 15px;
+}
+  
 
 }
 
