--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -59,7 +59,7 @@ body {
   text-rendering: optimizeLegibility;
    letter-spacing: 0.4px;
    word-spacing: 2px;
-  color: #888;
+  color: #a9b2b9;
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 } /* 16px/22px = font size line height
 
@@ -80,7 +80,7 @@ body {
 .container,
 .grid {
   margin: 0 auto;
-  width: 70%;
+  max-width: 70%;
 }
 .container {
   padding-left: 30px;
@@ -567,12 +567,97 @@ table h4 {
 .col-1-3,
 .col-2-3 {
   display: block;
+  max-width: 50%;
+  padding: 1em 2% 1em 2%;
+  margin-left: -5%;
+}
+
+.teaser.col-1-3{
+  width:100%;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.table{
+  width:100%;
+}
+
+.row{
+  margin-left: -100px;
 }
 
   .container {
-    max-width: 238px;
-    padding: 0 10px;
+    margin-left: 0px;
+    max-width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
   }
+.nav{
+  text-align: left;
+  font-size: .7em
+}
+
+table {
+  margin-bottom: 22px;
+  width: 100%;
+
+}
+table h4{
+  font-size: .75em;
+}
+table:last-child {
+  margin-bottom: 0;
+}
+th,
+td {
+  padding-bottom: 11px;
+  vertical-align: top;
+}
+th {
+  padding-right: 22px;
+  text-align: right;
+  width: 20%;
+}
+td {
+  width: 40%;
+}
+thead {
+  line-height: 22px;
+}
+thead th {
+  color: #648880;
+  font-size: 12px;
+}
+tbody th {
+  color: #a9b2b9;
+  font-size: 12px;
+  font-weight: 400;
+  padding-top: 11px;
+  text-transform: uppercase;
+}
+tbody td {
+  border-top: 1px solid #648880;
+  padding-top: 11px;
+}
+tbody td:first-of-type {
+  padding-right: 8px;
+}
+tbody td:last-of-type {
+  padding-left: 8px;
+}
+tbody td:only-of-type {
+  padding-left: 0;
+  padding-right: 0;
+}
+table a {
+  color: #888;
+}
+table h4 {
+  margin-bottom: 0;
+}
+.schedule-offset {
+  color: #a9b2b9;
+}
 
 }
 
