--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -84,15 +84,15 @@ body {
   max-width: 70%;
 }
 .container {
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 4%;
+  padding-right: 4%;
 }
 
 .grid,
 .col-1-3,
 .col-2-3 {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 2.5%;
+  padding-right: 2.5%;
 }
 
 .col-1-3,
@@ -136,7 +136,7 @@ body {
   
   border-bottom: 1px solid #648880;
    background:#343434;
-  min-width: 960px;
+  min-width: 100%;
   padding: 66px 0 44px 0;
 }
 
@@ -364,7 +364,8 @@ p a {
   border-radius: 5px;
   display: block;
   margin-bottom: 22px;
-  max-width: 100%
+  max-width: 100%;
+  height:auto;
 }
 
 /*
@@ -395,11 +396,19 @@ p a {
 
 
   .desaturate{
-    filter:  contrast(125%) sepia(.5);
-  -webkit-filter:  contrast(125%) sepia(.5);
-  -moz-filter: contrast(125%) sepia(.5);
-  -o-filter:  contrast(125%) sepia(.5);
-  -ms-filter: contrast(125%) sepia(.5);
+    filter:  contrast(150%) sepia(.7);
+  -webkit-filter:  contrast(150%) sepia(.7);
+  -moz-filter: contrast(150%) sepia(.7);
+  -o-filter:  contrast(150%) sepia(.7);
+  -ms-filter: contrast(150%) sepia(.7);
+}
+
+  .desaturate:hover{
+    filter:  contrast(100%) sepia(.1);
+  -webkit-filter:  contrast(100%) sepia(.1);
+  -moz-filter: contrast(100%) sepia(.1);
+  -o-filter:  contrast(100%) sepia(.1);
+  -ms-filter: contrast(100%) sepia(.1);
 }
 
 /*
@@ -579,32 +588,36 @@ table h4 {
   text-align: left;
 }
 
+.row{
+  min-width:100%;
+  
+  padding-left: 0;
+}
 .col-1-3,
 .col-2-3 {
   display: block;
-  max-width: 50%;
-  padding: 1em 2% 1em 2%;
-  margin-left: -5%;
+  width: 100%;
+  padding: 1em 0 1em 0;
+  
 }
 
 .teaser.col-1-3{
   width:100%;
-  padding-left: 20px;
-  padding-right: 20px;
+  display:block;
 }
 
 
 .table{
   width:100%;
 }
-
+/*
 .row{
   margin-left: -100px;
 }
-
+*/
   .container {
     margin-left: 0px;
-    max-width: 100%;
+    min-width: 100%;
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -615,7 +628,7 @@ table h4 {
 table {
   margin-bottom: 22px;
   max-width: 300px;
-  margin-left:100px;
+ 
 }
 
 .info{
