media query 400 addition

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -710,8 +710,8 @@ table h4 {
   }
 
   .primary-nav{
-  font-size: .6em;
-  text-align:left;
+  font-size: .5em;
+  text-align:center;
   margin-left: 0;
   min-width: 100%;
 
