--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -709,19 +709,27 @@ table h4 {
     font-size: 1em;
   }
 
-  .nav {
+  .nav li {
   text-align: center;
+  display: block;
+  padding: 10px 0 10px 0;
+  margin: 0;
+  border-top: 1px solid #a9b2b9;
+}
+
+.nav li:last-child{
+  border-bottom: 1px solid #a9b2b9;
 }
 
   .primary-nav{
-  font-size: .5em;
+  font-size: 12px;
   text-align:center;
   margin-left: 0;
   min-width: 100%;
 
 }
 }
-@media all and (max-width: 325px){
+@media all and (max-width: 385px){
   .logo{
     font-size: 2.5em;
     margin-bottom: 0px;
@@ -736,14 +744,16 @@ table h4 {
 }
 
   .primary-nav{
-  font-size: .4em;
+  font-size: 12px;
   text-align:left;
   margin-left: 0;
   min-width: 100%;
+
 }
 
   .nav li {
   margin: 0 10px;
+  display: block;
 }
 .nav li:last-child {
   margin-right: 0;
