--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -739,7 +739,7 @@ table h4 {
     font-size: 1em;
   }
 
- .primary-footer.nav li{
+ .nav li{
   text-align: center;
   display:block;
   padding: 10px 0 10px 0;
