--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -739,8 +739,11 @@ table h4 {
     font-size: 1em;
   }
 
+  .small{
+    clear:both;
+  }
+
  .nav li{
-  clear:both;
   text-align: center;
   display:block;
   padding: 10px 0 10px 0;
