--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -740,10 +740,11 @@ table h4 {
   }
 
   .small{
-    clear:both;
+    text-align: center;
   }
 
  .nav li{
+  clear:both;
   text-align: center;
   display:block;
   padding: 10px 0 10px 0;
