--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -740,7 +740,9 @@ table h4 {
   }
 
   .small{
-    text-align: center;
+    position: absolute;
+    bottom: 10px;
+    right:10px;
   }
 
  .nav li{
