--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -739,7 +739,7 @@ table h4 {
     font-size: 1em;
   }
 
-  .primary-footer .small{
+  .primary-footer small{
     position: absolute;
     bottom: 10px;
     right:10px;
