inline table footer small

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -740,8 +740,9 @@ table h4 {
   }
 
   .primary-footer small{
-   
     text-align: center;
+    clear: both;
+    display: inline-table;
   }
 
  .nav li{
