float none small

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -741,8 +741,7 @@ table h4 {
 
   .primary-footer small{
     text-align: center;
-    clear: both;
-    display: inline-table;
+    float:none;
   }
 
  .nav li{
