diaply block small

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -741,6 +741,8 @@ table h4 {
 
   .primary-footer small{
     text-align: center;
+    display:block;
+    width:100%;
     margin: auto;
     float:none;
   }
