--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -617,6 +617,12 @@ table h4 {
 100% { opacity: 1; }
 }
 
+body { -webkit-animation: bugfix infinite 1s; }
+
+@-webkit-keyframes bugfix {
+from { padding: 0; }
+to { padding: 0; }
+}
 
 
 /*Hide checkbox*/
