--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -541,7 +541,7 @@ tbody td:only-of-type {
   padding-right: 0;
 }
 table a {
-  color: #888;
+  color: rgba(127, 182, 161, .9);
 }
 table h4 {
   margin-bottom: 0;
@@ -549,6 +549,8 @@ table h4 {
 .schedule-offset {
   color: linen;
 }
+
+
 
 /*
   ========================================
@@ -730,10 +732,11 @@ thead {
 thead th {
   color: #648880;
   font-size: 14px;
+  font-family: 'latoregular';
 }
 tbody th {
   color: linen;
-  font-size: 12px;
+  font-size: 14px;
   font-family: 'latoregular';
   padding-top: 11px;
   text-transform: uppercase;
@@ -761,6 +764,8 @@ table h4 {
 }
 .schedule-offset {
   color: linen;
+  font-size: 14px;
+  font-family: 'latoregular';
 }
 
 .primary-footer small{
@@ -828,6 +833,15 @@ table h4 {
   margin-left: 0;
   min-width: 100%;
 
+}
+
+.col-1-3,
+.col-2-3 {
+  display: block;
+  width: 300px;
+  margin-left: -2em;
+  padding: 1em 0 1em 0;
+  
 }
 }
 
