--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -237,6 +237,7 @@ p a {
   cursor: pointer;
   text-transform: uppercase;
   border: 1px solid #e46a3c;
+  font-family: 'latoregular';
 }
 
 .btn-alt {
@@ -340,7 +341,8 @@ p a {
 .hero {
   color: linen;
   line-height: 44px;
-  padding: 22px 80px 66px 80px;
+  margin-top:3em;
+  padding: 0 80px 66px 80px;
   text-align: center;
 
 }
@@ -470,6 +472,9 @@ textarea {
   ========================================
 */
 
+.lead.container{
+  margin-top: 1.5em;
+}
 .lead p{
   font-size: 24px;
   line-height: 1.5em;
@@ -599,7 +604,7 @@ table h4 {
 }
 
 .show-menu:hover{
-  color: #7FB6AA;
+  color:#7FB6AA;
 }
 
 @-webkit-keyframes fadeIn {
@@ -650,18 +655,22 @@ animation-duration: 1s;
 @media all and (max-width: 1220px){
 
   .teaser img{
-
-    margin-bottom: 3em;
+    
+    margin: 0em auto 2em auto;
   }
+
+
 
 .teaser.col-1-3{
   width:100%;
   display:block;
+  text-align: center;
 }
 
-  .teaser.col-1-3 img, h5, h3, p{
-    max-width: 70%;
-    margin: 1em auto;
+tea
+
+  .teaser.col-1-3 img{
+  
 
   }
 
@@ -731,9 +740,8 @@ animation-duration: 1s;
     overflow-x:hidden; 
   }
 
-  .teaser.col-1-3 img, h5, h3, p{
-    max-width: 80%;
-    margin: 1em auto;
+  .teaser.col-1-3 img{
+  
   }
 
 .primary-nav, .tagline{
@@ -742,7 +750,7 @@ animation-duration: 1s;
 }
 
   .tagline{
-    font-size: 1em;
+   font-size: 1em;
     min-width:100%;
     text-align:center;
   }
@@ -866,7 +874,7 @@ table h4 {
 
 @media all and (max-width: 500px){
 
-  .teaser.col-1-3 img, h5, h3, p{
+  .teaser.col-1-3 img{
     max-width: 100%;
     margin: 1em auto;
   }
@@ -882,7 +890,7 @@ table h4 {
   }
 
   .tagline{
-    font-size: 1em;
+    
     width:100%;
     text-align: center;
   }
@@ -947,7 +955,7 @@ table h4 {
 
 
   .tagline{
-    font-size: 1em;
+  
     width:100%;
     text-align:center;
 
