--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -90,8 +90,8 @@ body {
   max-width: 70%;
 }
 .container {
-  padding-left: 4%;
-  padding-right: 4%;
+  padding-left: 2.5%;
+  padding-right: 2.5%;
 }
 
 .grid,
@@ -536,6 +536,7 @@ table {
   margin-bottom: 44px;
   width: 100%;
   font-family: 'latoregular';
+  padding-left: 2.5%;
 
 }
 table:last-child {
@@ -838,6 +839,8 @@ animation-duration: 1s;
 .col-2-3 {
   display: block;
   min-width: 100%;
+   padding-left: 20px;
+    padding-right: 20px
   
 }
 
@@ -966,10 +969,7 @@ table h4 {
     margin-bottom: 0px;
   }
 
-  .row{
-    min-width: 380px;
-    margin-left:0;
-  }
+ 
 
   .tagline{
     
