--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -97,8 +97,10 @@ body {
 .grid,
 .col-1-3,
 .col-2-3 {
+  /*
   padding-left: 2.5%;
   padding-right: 2.5%;
+  */
 }
 
 .col-1-3,
@@ -839,8 +841,7 @@ animation-duration: 1s;
 .col-2-3 {
   display: block;
   min-width: 100%;
-   padding-left: 20px;
-    padding-right: 20px
+
   
 }
 
@@ -865,8 +866,7 @@ animation-duration: 1s;
   .container {
     margin-left: 0px;
     min-width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
+   
   }
 
 time{
