--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -821,6 +821,10 @@ animation-duration: 1s;
     overflow-x:hidden; 
   }
 
+  .hero{
+     padding: 0 20px 16px 20px;
+  }
+
   .teaser.col-1-3 img{
   
   }
