--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -95,7 +95,7 @@ body {
 }
 
 .grid{
-  padding: 0 20px;
+  padding: 0 2.5%;
 }
 
 .grid,
@@ -386,6 +386,10 @@ p a:hover {
   height:auto;
 }
 
+.teaser.col-1-3{
+  padding: 1em;
+}
+
 /*
   ========================================
   Speakers
@@ -404,6 +408,8 @@ p a:hover {
 
 aside.col-1-3{
   width:20%;
+  padding-left: 2em;
+
 }
   
 .speaker-info {
@@ -412,6 +418,7 @@ aside.col-1-3{
   margin-top: 66px;
   font-family:'latoregular';
   text-align: center;
+  
 }
 
 .speaker-info a:hover{
@@ -423,7 +430,7 @@ aside.col-1-3{
   height: 70px;
   margin: -66px 0 22px 0;
   vertical-align: top;
- 
+
 }
 
 
