--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -481,12 +481,15 @@ cite{
 
 form {
   margin-bottom: 22px;
+  padding-left: 2em;
 }
 input,
 select,
 textarea {
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+
 
 .register-group label {
   color: linen;
@@ -827,6 +830,13 @@ animation-duration: 1s;
   body, html { 
     overflow-x:hidden; 
   }
+form {
+  padding-left:0;
+}
+
+.register-group{
+  max-width: 360px;
+}
 
   .hero{
      padding: 0 20px 16px 20px;
@@ -859,6 +869,11 @@ animation-duration: 1s;
 
   
 }
+
+aside.col-1-3{
+  width:20%;
+  padding-left: 0em;
+  }
 
 .teaser.col-1-3{
   width:100%;
