--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -268,6 +268,7 @@ p a:hover {
   background: #303030;
   padding: 11px 30px;
   font-size: 14px;
+  margin-top:2em;
  
 }
 .btn-default:hover {
@@ -836,7 +837,10 @@ form {
 
 .register-group{
   max-width: 360px;
+  padding-top:2em;
 }
+
+
 
   .hero{
      padding: 0 20px 16px 20px;
