--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -63,12 +63,24 @@ html, html a{
 /* 343434; ORIGINAL COLOR */
 
 body {
-   background:#303030;
+  background-color:#303030;
    letter-spacing: 0.5px;
-   word-spacing: px;
+  
   color: linen;
   font: normal 16px/22px "latoregular", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 } /* 16px/22px = font size line height
+
+
+/*
+  ========================================
+  SWITCH
+  ========================================
+*/
+
+.light{
+  background: white;
+  color:#303030;
+}
 
 /*
   ========================================
@@ -147,7 +159,7 @@ body {
 .row {
 
   border-bottom: 1px solid rgba(127, 182, 161, .3);
-   background:#303030;
+  
   min-width: 100%;
   padding: 66px 0 44px 0;
   margin-top: -40px;
@@ -388,7 +400,7 @@ p a:hover {
 }
 
 .teaser.col-1-3{
-  padding: 1em;
+  padding: 0 1em;
 }
 
 /*
@@ -748,7 +760,7 @@ animation-duration: 1s;
 
   .teaser img{
     
-    margin: 0em auto 2em auto;
+    margin: 2em auto 0em auto;
   }
 
 
@@ -847,7 +859,7 @@ form {
   }
 
   .teaser.col-1-3 img{
-  
+  padding-bottom: 2em;
   }
 
 .primary-nav, .tagline{
@@ -1068,7 +1080,18 @@ table h4 {
     margin-bottom: 0px;
   }
 
+  .hero h2{
+    font-size: 30px;
+    line-height: 35px;
+    padding-top:0;
+    margin-top: -30px;
+  }
 
+  .hero p{
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: -1em;
+  }
 
   .tagline{
   
