swicth stylesheets and use cookie to remember across site : FAIL

--- a/assets/stylesheets/dark.css
+++ b/assets/stylesheets/dark.css
@@ -77,9 +77,14 @@ body {
   ========================================
 */
 
-.light{
+.lightbg{
   background: white;
   color:#303030;
+}
+
+.dark_text{
+  color:#303030;
+
 }
 
 /*
