--- a/assets/stylesheets/light.css
+++ b/assets/stylesheets/light.css
@@ -282,7 +282,7 @@ p a:hover {
 
 .btn-default {
   color:#e46a3c;
-  background: #303030;
+  background: white;
   padding: 11px 30px;
   font-size: 14px;
   margin-top:2em;
