--- a/assets/stylesheets/dark.css
+++ b/assets/stylesheets/dark.css
@@ -259,6 +259,21 @@ p a:hover {
   ========================================
 */
 
+.fa {
+  padding-left: 5px;
+  font-size:12px;
+  font-weight: bold;
+}
+
+
+#contrast-btn a{
+  float: right;
+  text-align: right;
+  font-size: 12px;
+  font-family: 'latobold';
+  margin-top: 0px;
+  border-bottom: 1px solid #e46a3c;
+}
 .btn {
   border-radius: 5px;
   display: inline-block;
