--- a/assets/stylesheets/dark.css
+++ b/assets/stylesheets/dark.css
@@ -261,17 +261,17 @@ p a:hover {
 
 .fa {
   padding-left: 5px;
-  font-size:12px;
+  font-size:14px;
   font-weight: bold;
 }
 
 
 #contrast-btn a{
   float: right;
+  margin-top: 10px;
   text-align: right;
-  font-size: 12px;
+  font-size: 14px;
   font-family: 'latobold';
-  margin-top: 0px;
   border-bottom: 1px solid #e46a3c;
 }
 .btn {
@@ -872,6 +872,21 @@ form {
   padding-top:2em;
 }
 
+ .fa {
+  padding-left: 5px;
+  font-size:10px;
+  font-weight: bold;
+}
+
+
+#contrast-btn a{
+  margin-top: 10px;
+  float: right;
+  text-align: right;
+  font-size: 10px;
+  font-family: 'latobold';
+  border-bottom: 1px solid #e46a3c;
+}
 
 
   .hero{
@@ -1035,7 +1050,7 @@ table h4 {
     margin-bottom: 0px;
   }
 
- 
+
 
   .tagline{
     
