--- a/assets/stylesheets/dark.css
+++ b/assets/stylesheets/dark.css
@@ -261,16 +261,18 @@ p a:hover {
 
 .fa {
   padding-left: 5px;
-  font-size:14px;
+  font-size:12px;
   font-weight: bold;
 }
 
 
 #contrast-btn a{
   float: right;
-  margin-top: 10px;
+  position: absolute;
+  top: 10px;
+  right:20px;
   text-align: right;
-  font-size: 14px;
+  font-size: 12px;
   font-family: 'latobold';
   border-bottom: 1px solid #e46a3c;
 }
