--- a/assets/stylesheets/dark.css
+++ b/assets/stylesheets/dark.css
@@ -269,12 +269,18 @@ p a:hover {
 #contrast-btn a{
   float: right;
   position: absolute;
+  color:whitesmoke;
   top: 10px;
   right:20px;
     text-align: right;
   font-size: 12px;
   font-family: 'latobold';
-  border-bottom: 1px solid #e46a3c;
+  border-bottom: 1px solid whitesmoke;
+}
+
+#contrast-btn a:hover{
+  color:#6C9B90;
+   border-bottom: 1px solid #6C9B90;
 }
 
 .btn {
@@ -877,7 +883,7 @@ form {
 
  .fa {
   padding-left: 5px;
-  font-size:10px;
+  font-size:14px;
   font-weight: bold;
 }
 
