--- a/assets/stylesheets/dark.css
+++ b/assets/stylesheets/dark.css
@@ -901,8 +901,12 @@ form {
      padding: 0 20px 16px 20px;
   }
 
-  .teaser.col-1-3 img{
+ .teaser.col-1-3 img{
   padding-bottom: 1em;
+  }
+
+  .teaser.col-1-3 p{
+  padding-bottom: 2em;
   }
 
 .primary-nav, .tagline{
