--- a/assets/stylesheets/light.css
+++ b/assets/stylesheets/light.css
@@ -189,7 +189,7 @@ h5 {
   font-size: 14px;
   font-family: 'latoregular';
   text-transform: uppercase;
-  color:#303030;
+  color:#6C9B90;
 }
 
 p{
